--- a/UI.html
+++ b/UI.html
@@ -1,7 +1,7 @@
 <div class="container" style="height: 30vh; max-height: 250px;">
 	<div class="row" style="overflow-y: scroll;">
 		<div class="form-group" style="margin-top: 10px;">
-			<label for="auto_answer_ans">答案輸入區塊</label>
+			<label for="auto_answer_ans">答案輸入區塊 (如果沒有可以不用輸入)</label>
 			<textarea class="form-control" id="auto_answer_ans" rows="5"></textarea>
 		</div>
 		<div class="form-group">
