--- a/UI.html
+++ b/UI.html
@@ -2,7 +2,7 @@
 	<div class="col-md-12">
 		<h3>歡迎使用自動作答系統</h3>
 	</div>
-	<div class="col-md-9" style="overflow-y: scroll;">
+	<div class="col-md-9">
 		<div class="form-group" style="margin-top: 10px;">
 			<label for="auto_answer_ans">答案輸入區塊 (如果沒有可以不用輸入)</label>
 			<textarea class="form-control" id="auto_answer_ans" rows="5"></textarea>
@@ -12,7 +12,7 @@
 			<label style="margin-left: 10px;"> ps:作答完成後會自動加上新的答案 所以要保留紀錄請務必儲存</label>
 		</div>
 	</div>
-	<div class="col-md-3" style="overflow-y: scroll;">
+	<div class="col-md-3">
 		<div class="form-group" style="margin-top: 10px;">
 			<label for="auto_answer_log">Log</label>
 			<textarea class="form-control" id="auto_answer_log" rows="5"></textarea>
